# tsisa-lab-04

./: .gitmodules  CMakeLists.txt  README.md
include/: criteria_union_weighting_method.hpp  hierarchy_analysis_method.hpp  major_criterion_method.hpp  pareto_set_method.hpp  types.hpp
sources/: MKO_methods.cpp  criteria_union_weighting_method.cpp  hierarchy_analysis_method.cpp  major_criterion_method.cpp  pareto_set_method.cpp  types.cpp
